# Pixel-Art-Generator

./: .gitignore  CMakeLists.txt  README.md  makefile
includes/: bmp_defines.h
lib_jpeg/lib/pkgconfig/: libjpeg.pc  libturbojpeg.pc
src/: CMakeLists.txt  argument_parser.c  bmp_file.c  bmp_file.cpp  jpeg_file.c  jpeg_file.cpp  main_sw.c  main_sw.cpp  main_sw.h
src/bmp_module/: bmp_driver.hpp  bmp_file.cpp
src/csv_module/: csv_file.c  csv_write.h
src/include/: argument_parser.h  bmp_defines.h  bmp_defines.hpp  jpeg_defines.h  jpeg_defines.hpp  project.h  util.h
src/interface/: intf.cpp  intf.h  intf_drv.hpp
src/jpeg_module/: jpeg_driver.hpp  jpeg_file.cpp
src/main_sw/: argument_parser.c  main_sw.c  util.c
src/mask/: mask.cpp  mask.hpp
tests/: CMakeLists.txt
